# sp1-vectorx

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile.operator  README.md  cargo.toml  render.yaml  run_operator.sh
.github/workflows/: ci.yml  pr.yml
contracts/: .env.example  remappings.txt
contracts/broadcast/VectorX.s.sol/11155111/: run-1718141238.json  run-1718146925.json  run-latest.json
contracts/script/: Upgrade.s.sol  VectorX.s.sol
contracts/src/: Counter.sol  SP1Vector.sol  VectorX.sol
contracts/src/interfaces/: IVectorX.sol
contracts/test/: VectorX.t.sol
header-range/: Cargo.toml
header-range/elf/: riscv32im-succinct-zkvm-elf
header-range/src/: main.rs  types.rs
operator/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: consts.rs  header_range.rs  lib.rs  merkle.rs  rotate.rs  types.rs  utils.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
query/app/api/: route.ts
query/app/api/justification/: route.ts
query/app/utils/: deployments.json
rotate/: Cargo.toml
rotate/elf/: riscv32im-succinct-zkvm-elf
rotate/src/: main.rs
script/: Cargo.toml  build.rs  header-range-proof-with-io.json
script/src/: aws.rs  input.rs  lib.rs  main.rs  redis.rs  types.rs
services/: Cargo.toml
services/src/: aws.rs  input.rs  types.rs
